--- a/Versão_9.2.2/public/area-cliente.html
+++ b/Versão_9.2.2/public/area-cliente.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Área do Cliente | PixelTech</title>
-  <link rel="stylesheet" href="/css/estilo.css">
+  <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body class="area-cliente">
   <!-- Cabeçalho -->
