--- a/cadastro.html
+++ b/cadastro.html
@@ -1,3 +1,4 @@
+<!-- Este código é a estrutura base (head) de uma página HTML para cadastro de usuários na loja PixelTech. Ele inclui metadados, título da página e link para a folha de estilos CSS. -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
