--- a/finalizar.html
+++ b/finalizar.html
@@ -1,3 +1,5 @@
+<!-- Este código HTML representa a página de finalização de compra da loja PixelTech, incluindo o resumo do pedido, opções de pagamento e um popup de confirmação. -->
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
